<resources>
    <string name="leak_canary_analysis_failed">Leak analysis failed</string>
    <string name="leak_canary_class_has_leaked">%1$s has leaked %2$s</string>
    <string name="leak_canary_could_not_save_text">LeakCanary was unable to save the analysis result.</string>
    <string name="leak_canary_could_not_save_title">Could not save result.</string>
    <string name="leak_canary_delete">Delete</string>
    <string name="leak_canary_delete_all">Delete all</string>
    <string name="leak_canary_display_activity_label">Leaks</string>
    <string name="leak_canary_excluded_row">[Excluded] %s</string>
    <string name="leak_canary_failure_report">"Please report this failure to http://github.com/square/leakcanary
"</string>
    <string name="leak_canary_leak_excluded">%1$s has leaked %2$s (excluded leak)</string>
    <string name="leak_canary_leak_list_title">Leaks in %s</string>
    <string name="leak_canary_no_leak_text">The GC was being lazy.</string>
    <string name="leak_canary_no_leak_title">No leak found</string>
    <string name="leak_canary_notification_message">Click for more details</string>
    <string name="leak_canary_permission_notification_text">Click to enable storage permission for %s.</string>
    <string name="leak_canary_permission_notification_title">Leak detected, need permission</string>
    <string name="leak_canary_share_heap_dump">Share heap dump</string>
    <string name="leak_canary_share_leak">Share info</string>
    <string name="leak_canary_share_with">Share with…</string>
    <string name="leak_canary_storage_permission_activity_label">Storage permission</string>
    <string name="leak_canary_toast_heap_dump">Dumping memory, app will freeze. Brrrr.</string>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="mms_video_container_format" />
    <string name="mms_http_header">X_MDN: 1##LINE1##</string>
    <string name="strict_phonenumber_comparison_prefix" />
    <string name="notification_ringtone">content://settings/system/notification_sound</string>
    <string name="mms_image_resolution">XGA</string>
    <string name="sms_original_address_pattern" />
    <string name="sms_original_address_replacement" />
    <string name="conversation_strings_cannot_send_empty_message_txt">Empty message. Cannot send.</string>
    <string name="conversation_strings_notification_content_delivery_failed_multiple_txt">Undelivered messages: %d</string>
    <string name="conversation_strings_notification_content_delivery_failed_single_txt">Not delivered</string>
    <string name="conversations_strings_composer_dialog_do_not_show_again">Do not show this again</string>
    <string name="conversations_strings_settings_cost_saving_summary_txt">Convert special characters to send more text in each text message</string>
    <string name="conversations_strings_settings_cost_saving_txt">Cost saving</string>
    <string name="conversations_strings_settings_default_sms_app_title_txt">Default SMS app</string>
    <string name="conversations_strings_settings_default_sms_app_enabled_info_txt">Tap to change your default SMS app</string>
    <string name="conversations_strings_settings_delivery_report_txt">Delivery report</string>
    <string name="conversations_strings_settings_read_report_txt">MMS read reports</string>
    <string name="conversations_strings_settings_read_report_info_txt">Request and send MMS read reports</string>
    <string name="conversations_strings_settings_mms_group_conversation_title_txt">Group conversation</string>
    <string name="conversations_strings_settings_mms_group_conversation_info_txt">Messages will be sent to all recipients and all recipients can reply to others in the group, just like in an email. Sent as multimedia message.</string>
    <string name="conversations_strings_settings_mms_group_sim_number_title_txt">My phone number</string>
    <string name="conversations_strings_settings_mms_group_sim1_number_title_txt">My phone number SIM1</string>
    <string name="conversations_strings_settings_mms_group_sim2_number_title_txt">My phone number SIM2</string>
    <string name="conversations_strings_settings_mms_group_sim_number_info_txt">"Your phone number is used to identify you in group conversations. Without your phone number, group conversations won't work."</string>
    <string name="conversations_strings_settings_mms_auto_retrieval_title_txt">MMS auto download</string>
    <string name="conversations_strings_settings_mms_auto_retrieval_info_txt">Download multimedia messages automatically</string>
    <string name="conversations_strings_settings_mms_retrieval_during_roaming_txt">MMS when roaming</string>
    <string name="conversations_strings_settings_mms_retrieval_during_roaming_info_txt">Receive multimedia messages in roaming network</string>
    <string name="conversations_strings_settings_notification_enabled_txt">Notifications</string>
    <string name="conversations_strings_settings_notification_enabled_info_txt">Notify in status bar for new messages</string>
    <string name="conversations_strings_settings_notification_ringtone_txt">Notification sound</string>
    <string name="conversations_strings_settings_notification_ringtone_info_txt">Play a specific tone for message notifications</string>
    <string name="conversations_strings_settings_notification_vibration_txt">Notification vibration</string>
    <string name="conversations_strings_settings_notification_vibration_info_txt">Vibrate when receiving new messages</string>
    <string name="conversations_strings_settings_led_notification_enabled_txt">Notification light</string>
    <string name="conversations_strings_settings_cellbroadcast_enabled_txt">Cell Broadcast SMS</string>
    <string name="conversations_strings_settings_text_template_txt">Message templates</string>
    <string name="conversations_strings_settings_category_notification">Notifications</string>
    <string name="conversations_strings_settings_category_message_template">Message template</string>
    <string name="conversations_strings_settings_category_mms_settings">MMS settings</string>
    <string name="conversations_strings_settings_category_general_settings">General settings</string>
    <string name="conversations_strings_settings_category_sim_settings">SIM settings</string>
    <string name="conversations_strings_settings_screen_sim1_settings">SIM 1</string>
    <string name="conversations_strings_settings_screen_sim2_settings">SIM 2</string>
    <string name="conversations_strings_default_sms_app_banner_turn_on_sms_text">SMS is turned off. Turn on SMS to enjoy the best possible messaging experience on your device.</string>
    <string name="conversations_strings_default_sms_app_banner_maybe_later_button_text">Maybe later</string>
    <string name="conversations_strings_default_sms_app_banner_turn_on_sms_button_text">Turn on SMS</string>
    <string name="conversations_strings_settings_attach_geotagged_media_txt">Save location</string>
    <string name="conversations_strings_xms_welcome_screen_header">Messaging</string>
    <string name="conversations_strings_sms_welcome_screen_tagline">Send messages and stay in touch with your family and friends</string>
    <string name="conversations_strings_joyn_welcome_screen_page_sticker_store_title">Get more fun stickers!</string>
    <string name="conversations_strings_joyn_welcome_screen_page_sticker_store_short_description">You can also download more stickers by tapping on</string>
    <string name="conversations_strings_joyn_welcome_screen_page_sticker_store_description">Content is updated regularly and is indicated by [img:count]\\u0020 on top of the store icon, like this:</string>
    <string name="conversations_strings_welcome_screen_start_button_text">Get started</string>
</resources>