<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:background="?android:colorPrimary" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/welcome_content_container" android:paddingBottom="@dimen/no_mms_welcome_screen_bottom_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/no_mms_welcome_screen_header_bottom_margin" android:text="@string/conversations_strings_xms_welcome_screen_header" style="@style/WelcomeScreenLargeText" />
        <TextView android:id="@id/xms_welcome_screen_tagline_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/no_mms_welcome_screen_tagline_bottom_margin" android:text="@string/conversations_strings_sms_welcome_screen_tagline" android:layout_marginStart="@dimen/no_mms_welcome_screen_tagline_side_margin" android:layout_marginEnd="@dimen/no_mms_welcome_screen_tagline_side_margin" style="@style/WelcomeScreenMediumText" />
        <Button android:theme="@style/WelcomeScreenButtonTheme" android:id="@id/xms_welcome_screen_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/no_mms_welcome_screen_button_bottom_margin" android:maxWidth="@dimen/no_mms_welcome_screen_button_max_width" android:minWidth="@dimen/no_mms_welcome_screen_button_min_width" android:text="@string/conversations_strings_welcome_screen_start_button_text" android:paddingStart="@dimen/no_mms_welcome_screen_button_side_padding" android:paddingEnd="@dimen/no_mms_welcome_screen_button_side_padding" style="@style/WelcomeScreenButtonText" />
    </LinearLayout>
    <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/no_mms_welcome_image" android:scaleType="center" android:layout_above="@id/welcome_content_container" android:layout_alignParentTop="true" />
</RelativeLayout>